--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 body {
-  background-color: darkseagreen;
+  background-color: darkslategray;
   font-family: 'Slabo 27px', serif;
 }
 
 .navbar {
-  background: darkslategrey;
+  background: black;
 }
 
