--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
 body {
-  background-color: darkslategray;
+  background-color: #4d4d4d;
   font-family: 'Slabo 27px', serif;
 }
 
-.navbar {
-  background: black;
-}
+
 
 .test{
-  padding: 30px 0;
+  padding: 20px 0;
   text-align: center;
 }
 
+.navbar {
+  background: #314570;
+  padding: none;
+}
