--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,13 @@ body {
   padding: 30px;
   box-shadow: 5px 5px 5px 5px #444444;
 }
+
+.front {
+  background-image: url(https://images.unsplash.com/photo-1484347727553-f0643c73b62d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 90vh;
+  width: 100vw;
+  margin: none;
+}
